--- a/.github/workflows/s3s-to-statink.yml
+++ b/.github/workflows/s3s-to-statink.yml
@@ -42,3 +42,14 @@ jobs:
         working-directory: s3s
         run: |
           python3 s3s.py -r
+
+      - name: 差分を push
+        run: |
+          git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
+          git config --global user.name "${GITHUB_ACTOR}"
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          if (git diff --shortstat | grep '[0-9]'); then \
+            git add .; \
+            git commit -m "GitHub Actions から差分を Push"; \
+            git push origin HEAD:${GITHUB_REF}; \
+          fi
