--- a/.github/workflows/s3s-to-statink.yml
+++ b/.github/workflows/s3s-to-statink.yml
@@ -42,3 +42,15 @@ jobs:
         working-directory: s3s
         run: |
           python3 s3s.py -r
+
+      - name: git commit & push
+        run: |
+          git config core.filemode false
+          if ! git diff --exit-code --quiet
+          then
+            git add --update
+            git config user.name github-actions
+            git config user.email action@github.com
+            git commit -m "Commit by github-actions"
+            git push https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{github.ref}}
+          fi
