--- a/.github/workflows/s3s-to-statink.yml
+++ b/.github/workflows/s3s-to-statink.yml
@@ -43,14 +43,12 @@ jobs:
         run: |
           python3 s3s.py -r
 
-      - name: git commit & push
+   - name: Commit and Push # 実行結果をプッシュしてレポジトリに反映
         run: |
-          git config core.filemode false
-          if ! git diff --exit-code --quiet
-          then
-            git add --update
-            git config user.name github-actions
-            git config user.email action@github.com
-            git commit -m "Commit by github-actions"
-            git push https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{github.ref}}
-          fi
+          git config --local user.email "i3mallow@gmail.com"
+          git config --local user.name "nama-ko"
+          git add .
+          git commit -m "Update product information"
+          git config pull.rebase false
+          git pull
+          git push origin master
